# PawPrintCapture

./: .replit  README.md  package-lock.json  package.json  pyproject.toml  replit.md
attached_assets/: Pasted-Objective-Create-a-full-stack-web-application-that-lets-users-upload-a-PowerPoint-file-and-automati-1753778991829_1753778991829.txt
client/src/: App.tsx
client/src/components/ui/: api-key-form.tsx  file-upload.tsx  progress-tracker.tsx
client/src/pages/: upload.tsx
outputs/04c73bc4-4d3d-4dc6-b395-e8c2e15f8e6f/: transcripts.json
outputs/21bca7df-4324-42fe-ba9f-8a19a8d62ac0/: transcripts.json
outputs/4a66087e-72d6-4a92-95e8-ff682d5e0488/: transcripts.json
outputs/89e064cc-017d-4d88-8e96-5425445a16e3/: transcripts.json
outputs/a18be0b6-3d8a-47bd-9f1b-2c634cdd6b95/: transcripts.json
outputs/c44105a2-55e0-4cc3-a871-f3b79beb2c53/: transcripts.json
outputs/dbbf7d54-c4ce-4147-a101-d72759741c2c/: transcripts.json
server/: requirements.txt  routes.ts  storage.ts
server/services/: audio_synthesizer.py  powerpoint_processor.py  transcript_generator.py  video_renderer.py
server/utils/: file_manager.py
shared/: schema.ts
