[project]
name = "repl-nix-workspace"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.116.1",
    "ffmpeg-python>=0.2.0",
    "google-cloud-texttospeech>=2.27.0",
    "openai>=1.97.1",
    "pillow>=11.3.0",
    "pydub>=0.25.1",
    "pytesseract>=0.3.13",
    "python-multipart>=0.0.20",
    "python-pptx>=1.0.2",
    "requests>=2.32.4",
    "uvicorn>=0.35.0",
]
